--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,13 +4,26 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-numpy = "*"
-scipy = "*"
-pillow = "*"
-flask-cors = "*"
-flask-socketio = "*"
-numba = "*"
+bidict = "==0.23.1"
+blinker = "==1.9.0"
+click = "==8.1.8"
+flask = "==3.1.0"
+flask-cors = "==5.0.0"
+flask-socketio = "==5.5.1"
+h11 = "==0.14.0"
+itsdangerous = "==2.2.0"
+jinja2 = "==3.1.5"
+llvmlite = "==0.44.0"
+markupsafe = "==3.0.2"
+numba = "==0.61.0"
+numpy = "==2.1.3"
+pillow = "==11.1.0"
+python-engineio = "==4.11.2"
+python-socketio = "==5.12.1"
+scipy = "==1.15.1"
+simple-websocket = "==1.1.0"
+werkzeug = "==3.1.3"
+wsproto = "==1.2.0"
 
 [dev-packages]
 
