--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -24,6 +24,7 @@ scipy = "==1.15.1"
 simple-websocket = "==1.1.0"
 werkzeug = "==3.1.3"
 wsproto = "==1.2.0"
+scikit-image = "*"
 
 [dev-packages]
 
